SFDCProject/src/objects/Site_Characteristic__c.object
<CustomObject>
    <fields>
        <fullName>Array_ID__c</fullName>
        <label>Array ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Average_Annual_Shading__c</fullName>
        <label>EPC Average Annual Shading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPC_Azimuth__c</fullName>
        <label>EPC Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPC_Tilt__c</fullName>
        <label>EPC Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Audit__c</fullName>
        <label>Install Audit</label>
        <referenceTo>Install_Audit__c</referenceTo>
        <relationshipName>Site_Characteristics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inverter_Count__c</fullName>
        <label>Inverter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_Num__c</fullName>
        <label>Inverter Model #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Serial_Number__c</fullName>
        <label>Meter Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observed_Average_Annual_Shading__c</fullName>
        <label>Observed Average Annual Shading</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observed_Azimuth__c</fullName>
        <label>Observed Azimuth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observed_Tilt__c</fullName>
        <label>Observed Tilt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <label>Panel Manufacturer</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Model_Num__c</fullName>
        <label>Panel Model #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Name__c</fullName>
        <label>Proposal Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Site Characteristic</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Characteristics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>